hphp/test/zend/good/ext/iconv/tests/iconv003.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
extension_loaded('iconv') || die('skip iconv extension is not available');
}
