hphp/test/zend/bad/ext/iconv/tests/iconv_ini_encoding.php.skipif
<?php extension_loaded('iconv') or die('skip mbstring not available'); ?>